--- a/osa3/puhelinluettelo-backend/package.json
+++ b/osa3/puhelinluettelo-backend/package.json
@@ -6,18 +6,26 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:ui": "rm -rf build && cd ../../osa2/puhelinluettelo/ && npm run build --prod && cp -r build ../../osa3/puhelinluettelo-backend/",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "logs:prod": "heroku logs --tail"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ts-node-dev": "^1.0.0-pre.59",
-    "typescript": "^4.0.2"
+    "ts-node-dev": "^1.0.0-pre.59"
   },
   "dependencies": {
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "ts-node": "^8.10.2"
+    "morgan": "^1.10.0",
+    "ts-node": "^8.10.2",
+    "typescript": "^4.0.2"
   }
 }
