--- a/osa3/puhelinluettelo-backend/package.json
+++ b/osa3/puhelinluettelo-backend/package.json
@@ -9,12 +9,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf build && cd ../../osa2/puhelinluettelo/ && npm run build --prod && cp -r build ../../osa3/puhelinluettelo-backend/",
     "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/mongoose-unique-validator": "^1.0.5",
     "ts-node-dev": "^1.0.0-pre.59"
   },
   "dependencies": {
@@ -23,7 +24,10 @@
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.6.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.12",
+    "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0",
     "ts-node": "^8.10.2",
     "typescript": "^4.0.2"
