--- a/osa2/puhelinluettelo/package.json
+++ b/osa2/puhelinluettelo/package.json
@@ -32,5 +32,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "eslint": "^8.2.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.27.0"
+  }
 }
