--- a/osa3/puhelinluettelo-backend/package.json
+++ b/osa3/puhelinluettelo-backend/package.json
@@ -16,6 +16,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/mongoose-unique-validator": "^1.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
     "ts-node-dev": "^1.0.0-pre.59"
   },
   "dependencies": {
