--- a/osa4/bloglist/package.json
+++ b/osa4/bloglist/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "NODE_ENV=production node src/index.js",
     "dev": "NODE_ENV=development nodemon src/index.js",
-    "test": "NODE_ENV=test jest --verbose --runInBand"
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "start:test": "NODE_ENV=test node src/index.js"
   },
   "author": "",
   "license": "ISC",
